--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from miller.bslthemes.com/arter-demo/portfolio-2-col.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 May 2024 17:46:14 GMT -->
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -238,18 +239,19 @@
             </div>
             <!-- scroll frame end -->
 
-           <!-- sidebar social -->
-           <div class="art-ls-social">
-            <!-- social link -->
-            <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <!-- social link -->
-            <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
-          </div>
-          <!-- sidebar social end -->
+            <!-- sidebar social -->
+            <div class="art-ls-social">
+              <!-- social link -->
+              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                  class="fab fa-linkedin-in"></i></a>
+              <!-- social link -->
+              <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+            <!-- sidebar social end -->
 
           </div>
           <!-- menu bar frame end -->
@@ -304,7 +306,8 @@
                     <!-- grid item -->
                     <div class="art-grid-item webTemplates">
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/1.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/1.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/1.jpg" alt="item">
                         <!-- zoom icon -->
@@ -326,7 +329,8 @@
                     <div class="art-grid-item logos">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/2.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/2.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/2.jpg" alt="item">
                         <!-- zoom icon -->
@@ -348,20 +352,21 @@
                     <div class="art-grid-item drawings">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/3.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/3.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/3.jpg" alt="item">
                         <!-- zoom icon -->
                         <span class="art-item-hover"><i class="fas fa-expand"></i></span>
                       </a>
                       <!-- grid item frame end -->
-                     <!-- description -->
-                     <div class="art-item-description">
-                      <!-- title -->
-                      <h5 class="mb-15">Blog</h5>
-                      <!-- button -->
-                    </div>
-                    <!-- description end -->
+                      <!-- description -->
+                      <div class="art-item-description">
+                        <!-- title -->
+                        <h5 class="mb-15">Blog</h5>
+                        <!-- button -->
+                      </div>
+                      <!-- description end -->
 
                     </div>
                     <!-- grid item end -->
@@ -370,20 +375,21 @@
                     <div class="art-grid-item ui">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/4.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/4.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/4.jpg" alt="item">
                         <!-- zoom icon -->
                         <span class="art-item-hover"><i class="fas fa-expand"></i></span>
                       </a>
                       <!-- grid item frame end -->
-                     <!-- description -->
-                     <div class="art-item-description">
-                      <!-- title -->
-                      <h5 class="mb-15">Blog</h5>
-                      <!-- button -->
-                    </div>
-                    <!-- description end -->
+                      <!-- description -->
+                      <div class="art-item-description">
+                        <!-- title -->
+                        <h5 class="mb-15">Blog</h5>
+                        <!-- button -->
+                      </div>
+                      <!-- description end -->
 
                     </div>
                     <!-- grid item end -->
@@ -392,20 +398,21 @@
                     <div class="art-grid-item webTemplates">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/5.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/5.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/5.jpg" alt="item">
                         <!-- zoom icon -->
                         <span class="art-item-hover"><i class="fas fa-expand"></i></span>
                       </a>
                       <!-- grid item frame end -->
-                     <!-- description -->
-                     <div class="art-item-description">
-                      <!-- title -->
-                      <h5 class="mb-15">Blog</h5>
-                      <!-- button -->
-                    </div>
-                    <!-- description end -->
+                      <!-- description -->
+                      <div class="art-item-description">
+                        <!-- title -->
+                        <h5 class="mb-15">Blog</h5>
+                        <!-- button -->
+                      </div>
+                      <!-- description end -->
 
                     </div>
                     <!-- grid item end -->
@@ -414,7 +421,8 @@
                     <div class="art-grid-item logos">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/6.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/6.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/6.jpg" alt="item">
                         <!-- zoom icon -->
@@ -435,20 +443,21 @@
                     <div class="art-grid-item drawings">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/7.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/7.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/7.jpg" alt="item">
                         <!-- zoom icon -->
                         <span class="art-item-hover"><i class="fas fa-expand"></i></span>
                       </a>
                       <!-- grid item frame end -->
-                     <!-- description -->
-                     <div class="art-item-description">
-                      <!-- title -->
-                      <h5 class="mb-15">Blog</h5>
-                      <!-- button -->
-                    </div>
-                    <!-- description end -->
+                      <!-- description -->
+                      <div class="art-item-description">
+                        <!-- title -->
+                        <h5 class="mb-15">Blog</h5>
+                        <!-- button -->
+                      </div>
+                      <!-- description end -->
 
                     </div>
                     <!-- grid item end -->
@@ -457,20 +466,21 @@
                     <div class="art-grid-item ui">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/8.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/8.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/8.jpg" alt="item">
                         <!-- zoom icon -->
                         <span class="art-item-hover"><i class="fas fa-expand"></i></span>
                       </a>
                       <!-- grid item frame end -->
-                     <!-- description -->
-                     <div class="art-item-description">
-                      <!-- title -->
-                      <h5 class="mb-15">Blog</h5>
-                      <!-- button -->
-                    </div>
-                    <!-- description end -->
+                      <!-- description -->
+                      <div class="art-item-description">
+                        <!-- title -->
+                        <h5 class="mb-15">Blog</h5>
+                        <!-- button -->
+                      </div>
+                      <!-- description end -->
 
                     </div>
                     <!-- grid item end -->
@@ -478,7 +488,8 @@
                     <div class="art-grid-item ui">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/9.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/9.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/9.jpg" alt="item">
                         <!-- zoom icon -->
@@ -499,7 +510,8 @@
                     <div class="art-grid-item ui">
 
                       <!-- grid item frame -->
-                      <a data-fancybox="gallery" data-no-swup href="img/blog/10.jpg" class="art-a art-portfolio-item-frame art-horizontal">
+                      <a data-fancybox="gallery" data-no-swup href="img/blog/10.jpg"
+                        class="art-a art-portfolio-item-frame art-horizontal">
                         <!-- img -->
                         <img src="img/blog/10.jpg" alt="item">
                         <!-- zoom icon -->
@@ -531,20 +543,26 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
@@ -561,12 +579,12 @@
               <!-- container -->
               <div class="container-fluid">
 
-               <!-- footer -->
-               <footer>
-                <!-- copyright -->
-                <div class="art-copy">© 2024 Abdul Basit</div>
-              </footer>
-              <!-- footer end -->
+                <!-- footer -->
+                <footer>
+                  <!-- copyright -->
+                  <div class="art-copy">© 2024 Abdul Basit</div>
+                </footer>
+                <!-- footer end -->
 
               </div>
               <!-- container end -->
@@ -580,8 +598,8 @@
         </div>
         <!-- content end -->
 
-         <!-- menu bar -->
-         <div class="art-menu-bar">
+        <!-- menu bar -->
+        <div class="art-menu-bar">
 
           <!-- menu bar frame -->
           <div class="art-menu-bar-frame">
@@ -638,8 +656,8 @@
     </div>
     <!-- app wrapper end -->
 
-     <!-- preloader -->
-     <div class="art-preloader">
+    <!-- preloader -->
+    <div class="art-preloader">
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
@@ -682,4 +700,5 @@
 
 
 <!-- Mirrored from miller.bslthemes.com/arter-demo/portfolio-2-col.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 May 2024 17:46:14 GMT -->
+
 </html>
