--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from miller.bslthemes.com/arter-demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 May 2024 17:46:07 GMT -->
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -238,18 +239,19 @@
             </div>
             <!-- scroll frame end -->
 
-           <!-- sidebar social -->
-           <div class="art-ls-social">
-            <!-- social link -->
-            <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <!-- social link -->
-            <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
-          </div>
-          <!-- sidebar social end -->
+            <!-- sidebar social -->
+            <div class="art-ls-social">
+              <!-- social link -->
+              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                  class="fab fa-linkedin-in"></i></a>
+              <!-- social link -->
+              <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+            <!-- sidebar social end -->
 
           </div>
           <!-- menu bar frame end -->
@@ -382,7 +384,8 @@
                         <!-- form field -->
                         <div class="art-form-field">
                           <!-- message textarea -->
-                          <textarea id="message" name="text" class="art-input" placeholder="Message" required></textarea>
+                          <textarea id="message" name="text" class="art-input" placeholder="Message"
+                            required></textarea>
                           <!-- label -->
                           <label for="message"><i class="far fa-envelope"></i></label>
                         </div>
@@ -414,20 +417,26 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
@@ -444,12 +453,12 @@
               <!-- container -->
               <div class="container-fluid">
 
-               <!-- footer -->
-               <footer>
-                <!-- copyright -->
-                <div class="art-copy">© 2024 Abdul Basit</div>
-              </footer>
-              <!-- footer end -->
+                <!-- footer -->
+                <footer>
+                  <!-- copyright -->
+                  <div class="art-copy">© 2024 Abdul Basit</div>
+                </footer>
+                <!-- footer end -->
 
               </div>
               <!-- container end -->
@@ -463,8 +472,8 @@
         </div>
         <!-- content end -->
 
-         <!-- menu bar -->
-         <div class="art-menu-bar">
+        <!-- menu bar -->
+        <div class="art-menu-bar">
 
           <!-- menu bar frame -->
           <div class="art-menu-bar-frame">
@@ -521,8 +530,8 @@
     </div>
     <!-- app wrapper end -->
 
-     <!-- preloader -->
-     <div class="art-preloader">
+    <!-- preloader -->
+    <div class="art-preloader">
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
@@ -565,4 +574,5 @@
 
 
 <!-- Mirrored from miller.bslthemes.com/arter-demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 May 2024 17:46:07 GMT -->
+
 </html>
