--- a/history.html
+++ b/history.html
@@ -242,7 +242,8 @@
             <!-- sidebar social -->
             <div class="art-ls-social">
               <!-- social link -->
-              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                  class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
               <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
               <!-- social link -->
@@ -278,10 +279,8 @@
 
             <!-- scroll frame -->
             <div id="scrollbar" class="art-scroll-frame">
-
               <!-- container -->
               <div class="container-fluid">
-
                 <!-- row -->
                 <div class="row p-30-0">
                   <div class="col-lg-6">
@@ -320,7 +319,8 @@
                             class="art-link art-color-link art-w-chevron">See Projects</a>
                         </div>
                         <!-- popup -->
-                        <div class="art-recomendation-popup" style="display: none; width: 100%;" id="WisemanInnovations">
+                        <div class="art-recomendation-popup" style="display: none; width: 100%;"
+                          id="WisemanInnovations">
 
                           <!-- testimonial -->
                           <div class="art-a art-testimonial">
@@ -328,24 +328,30 @@
                             <div class="testimonial-body">
                               <!-- name -->
                               <h5>Working on These Projects</h5>
-                              <div class="art-el-suptitle">
+                              <div class="art-el-suptitle mb-15">
                                 <ul>
                                   <li>360 Ribbon Extension</li>
                                   <li>360 Ribbon Adoption Portal</li>
                                   <li>360 Ribbon Patient Profile</li>
-                                  <li>Clarity By Wellvana Extension</li>
-                                  <li>Clarity By Wellvana Adoption Portal</li>
-                                </ul>
+
+                                  <div class="art-el-suptitle">
+                                    <ul>
+                                      <li>360 Ribbon Extension</li>
+                                      <li>360 Ribbon Adoption Portal</li>
+                                      <li>360 Ribbon Patient Profile</li>
+                                      <li>Clarity By Wellvana Extension</li>
+                                      <li>Clarity By Wellvana Adoption Portal</li>
+                                    </ul>
+                                  </div>
                               </div>
+                              <!-- testimonial body end -->
                             </div>
-                            <!-- testimonial body end -->
+                            <!-- testimonial end -->
+
                           </div>
-                          <!-- testimonial end -->
-
+                          <!-- popup end -->
                         </div>
-                        <!-- popup end -->
                       </div>
-
                       <div class="art-timeline-item">
                         <div class="art-timeline-mark-light"></div>
                         <div class="art-timeline-mark"></div>
@@ -361,7 +367,8 @@
                               <span class="art-date">Dec 2021 - Feb 2023</span>
                             </div>
                           </div>
-                          <p>Gulberg Green, Wazir Arcade, Plot No. 95,96, Business Square, Block-C, Islamabad | Pakistan
+                          <p>Gulberg Green, Wazir Arcade, Plot No. 95,96, Business Square, Block-C, Islamabad |
+                            Pakistan
                           </p>
 
                           <a data-fancybox="recommendation" data-no-swup href="#APPINSNAP"
@@ -580,170 +587,207 @@
                               <span class="art-date">Mar 2012 - Jun 2014</span>
                             </div>
                           </div>
-                          <a data-fancybox="diplome" data-no-swup href="files/certificate.jpg"
-                            class="art-link art-color-link art-w-chevron">Diplome</a>
+                          <a data-fancybox="diplome" data-no-swup href="files/certificate.jpg" class="art-link art-color-link art-w-chev <!-- row -->
+                    <div class=" row">
+                            <!-- col -->
+                            <div class="col-6 col-lg-4">
+                              <!-- brand -->
+                              <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                            </div>
+                            <!-- col end -->
+                            <!-- col -->
+                            <div class="col-6 col-lg-4">
+                              <!-- brand -->
+                              <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                            </div>
+                            <!-- col end -->
+
+                            <!-- col -->
+                            <div class="col-6 col-lg-4">
+                              <!-- brand -->
+                              <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                            </div>
+                            <!-- col end -->
+
+
+
                         </div>
+                        <!-- row end -->
+                        <div class="col-6 col-lg-4">
+                          <!-- brand -->
+                          <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                        </div>
+                        <!-- col end -->
+
+
 
                       </div>
-
+                      <!-- row end -->
                     </div>
-                    <!-- timeline end -->
-
                   </div>
-                  <!-- container end -->
-
-                  <!-- container -->
-                  <div class="container-fluid">
-
-                    <!-- row -->
-                    <div class="row">
-                      <!-- col -->
-                      <div class="col-6 col-lg-4">
-                        <!-- brand -->
-                        <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
-                      </div>
-                      <!-- col end -->
-                      <!-- col -->
-                      <div class="col-6 col-lg-4">
-                        <!-- brand -->
-                        <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
-                      </div>
-                      <!-- col end -->
-
-                      <!-- col -->
-                      <div class="col-6 col-lg-4">
-                        <!-- brand -->
-                        <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
-                      </div>
-                      <!-- col end -->
-
-
-
-                    </div>
-                    <!-- row end -->
-
-                  </div>
-                  <!-- container end -->
-
-                  <!-- container -->
-                  <div class="container-fluid">
-
-                    <!-- footer -->
-                    <footer>
-                      <!-- copyright -->
-                      <div class="art-copy">© 2024 Abdul Basit</div>
-                    </footer>
-                    <!-- footer end -->
-
-                  </div>
-                  <!-- container end -->
-
                 </div>
-                <!-- scroll frame end -->
+              </div>
+            </div>
+
+            <!-- container -->
+            <div class="container-fluid">
+
+              <!-- row -->
+              <div class="row">
+                <!-- col -->
+                <div class="col-6 col-lg-3">
+                  <!-- brand -->
+                  <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                </div>
+                <!-- col end -->
+                <!-- col -->
+                <div class="col-6 col-lg-3">
+                  <!-- brand -->
+                  <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                </div>
+                <!-- col end -->
+                <!-- col -->
+                <div class="col-6 col-lg-3">
+                  <!-- brand -->
+                  <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                </div>
+                <!-- col end -->
+
+                <!-- col -->
+                <div class="col-6 col-lg-3">
+                  <!-- brand -->
+                  <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                </div>
+                <!-- col end -->
+
+
 
               </div>
-              <!-- swup container end -->
+              <!-- row end -->
 
             </div>
-            <!-- content end -->
+            <!-- container end -->
 
-            <!-- menu bar -->
-            <div class="art-menu-bar">
+            <!-- container -->
+            <div class="container-fluid">
 
-              <!-- menu bar frame -->
-              <div class="art-menu-bar-frame">
-
-                <!-- menu bar header -->
-                <div class="art-menu-bar-header">
-                  <!-- menu bar button -->
-                  <div class="art-menu-bar-btn">
-                    <!-- icon -->
-                    <span></span>
-                  </div>
-                  <!-- menu bar button end -->
-                </div>
-                <!-- menu bar header end -->
-
-                <!-- current page title -->
-                <div class="art-current-page"></div>
-                <!-- current page title end -->
-
-                <!-- scroll frame -->
-                <div class="art-scroll-frame">
-
-                  <!-- menu -->
-              <nav id="swupMenu">
-                <!-- menu list -->
-                <ul class="main-menu">
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="home.html">Home</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="history.html">History</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="contact.html">Contact</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="blog.html">Blog</a></li>
-                </ul>
-                <!-- menu list end -->
-              </nav>
-              <!-- menu end -->
-
-                </div>
-                <!-- scroll frame end -->
-
-              </div>
-              <!-- menu bar frame -->
+              <!-- footer -->
+              <footer>
+                <!-- copyright -->
+                <div class="art-copy">© 2024 Abdul Basit</div>
+              </footer>
+              <!-- footer end -->
 
             </div>
-            <!-- menu bar end -->
+            <!-- container end -->
 
           </div>
-          <!-- app container end -->
+          <!-- scroll frame end -->
 
         </div>
-        <!-- app wrapper end -->
-
-        <!-- preloader -->
-        <div class="art-preloader">
-          <!-- preloader content -->
-          <div class="art-preloader-content">
-            <!-- title -->
-            <h4>Abdul Basit</h4>
-            <!-- progressbar -->
-            <div id="preloader" class="art-preloader-load"></div>
-          </div>
-          <!-- preloader content end -->
-        </div>
-        <!-- preloader end -->
+        <!-- swup container end -->
 
       </div>
-      <!-- app end -->
+      <!-- content end -->
 
-      <!-- jquery js -->
-      <script src="js/plugins/jquery.min.js"></script>
-      <!-- anime js -->
-      <script src="js/plugins/anime.min.js"></script>
-      <!-- swiper js -->
-      <script src="js/plugins/swiper.min.js"></script>
-      <!-- progressbar js -->
-      <script src="js/plugins/progressbar.min.js"></script>
-      <!-- smooth scrollbar js -->
-      <script src="js/plugins/smooth-scrollbar.min.js"></script>
-      <!-- overscroll js -->
-      <script src="js/plugins/overscroll.min.js"></script>
-      <!-- typing js -->
-      <script src="js/plugins/typing.min.js"></script>
-      <!-- isotope js -->
-      <script src="js/plugins/isotope.min.js"></script>
-      <!-- fancybox js -->
-      <script src="js/plugins/fancybox.min.js"></script>
-      <!-- swup js -->
-      <script src="js/plugins/swup.min.js"></script>
+      <!-- menu bar -->
+      <div class="art-menu-bar">
 
-      <!-- main js -->
-      <script src="js/main.js"></script>
+        <!-- menu bar frame -->
+        <div class="art-menu-bar-frame">
+
+          <!-- menu bar header -->
+          <div class="art-menu-bar-header">
+            <!-- menu bar button -->
+            <div class="art-menu-bar-btn">
+              <!-- icon -->
+              <span></span>
+            </div>
+            <!-- menu bar button end -->
+          </div>
+          <!-- menu bar header end -->
+
+          <!-- current page title -->
+          <div class="art-current-page"></div>
+          <!-- current page title end -->
+
+          <!-- scroll frame -->
+          <div class="art-scroll-frame">
+
+            <!-- menu -->
+            <nav id="swupMenu">
+              <!-- menu list -->
+              <ul class="main-menu">
+                <!-- menu item -->
+                <li class="menu-item"><a href="home.html">Home</a></li>
+                <!-- menu item -->
+                <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
+                <!-- menu item -->
+                <li class="menu-item current-menu-item"><a href="history.html">History</a></li>
+                <!-- menu item -->
+                <li class="menu-item"><a href="contact.html">Contact</a></li>
+                <!-- menu item -->
+                <li class="menu-item"><a href="blog.html">Blog</a></li>
+              </ul>
+              <!-- menu list end -->
+            </nav>
+            <!-- menu end -->
+
+          </div>
+          <!-- scroll frame end -->
+
+        </div>
+        <!-- menu bar frame -->
+
+      </div>
+      <!-- menu bar end -->
+
+    </div>
+    <!-- app container end -->
+
+  </div>
+  <!-- app wrapper end -->
+
+  <!-- preloader -->
+  <div class="art-preloader">
+    <!-- preloader content -->
+    <div class="art-preloader-content">
+      <!-- title -->
+      <h4>Abdul Basit</h4>
+      <!-- progressbar -->
+      <div id="preloader" class="art-preloader-load"></div>
+    </div>
+    <!-- preloader content end -->
+  </div>
+  <!-- preloader end -->
+
+  </div>
+  <!-- app end -->
+
+  <!-- jquery js -->
+  <script src="js/plugins/jquery.min.js"></script>
+  <!-- anime js -->
+  <script src="js/plugins/anime.min.js"></script>
+  <!-- swiper js -->
+  <script src="js/plugins/swiper.min.js"></script>
+  <!-- progressbar js -->
+  <script src="js/plugins/progressbar.min.js"></script>
+  <!-- smooth scrollbar js -->
+  <script src="js/plugins/smooth-scrollbar.min.js"></script>
+  <!-- overscroll js -->
+  <script src="js/plugins/overscroll.min.js"></script>
+  <!-- typing js -->
+  <script src="js/plugins/typing.min.js"></script>
+  <!-- isotope js -->
+  <script src="js/plugins/isotope.min.js"></script>
+  <!-- fancybox js -->
+  <script src="js/plugins/fancyb
+.min.js"></script>
+  <!-- swup js -->
+  <script src="js/plugins/swup.min.js"></script>
+
+  <!-- main js -->
+  <script src="js/main.js"></script>
 
 </body>
 
