--- a/home.html
+++ b/home.html
@@ -242,7 +242,8 @@
             <!-- sidebar social -->
             <div class="art-ls-social">
               <!-- social link -->
-              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                  class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
               <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
               <!-- social link -->
@@ -299,8 +300,8 @@
                           <!-- title -->
                           <h1 class="mb-15">Software Engineer <br>.Net</h1>
                           <!-- suptitle -->
-                          <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; Software Engineer at <span class="txt-rotate"
-                              data-period="2000"
+                          <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; Software Engineer at <span
+                              class="txt-rotate" data-period="2000"
                               data-rotate='["WISEMAN INNOVATIONS."]'></span>&lt;/<i>code</i>&gt;
                           </div>
                           <div class="art-buttons-frame">
@@ -919,20 +920,26 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
@@ -949,12 +956,12 @@
               <!-- container -->
               <div class="container-fluid">
 
-               <!-- footer -->
-               <footer>
-                <!-- copyright -->
-                <div class="art-copy">© 2024 Abdul Basit</div>
-              </footer>
-              <!-- footer end -->
+                <!-- footer -->
+                <footer>
+                  <!-- copyright -->
+                  <div class="art-copy">© 2024 Abdul Basit</div>
+                </footer>
+                <!-- footer end -->
 
               </div>
               <!-- container end -->
