--- a/portfolio.html
+++ b/portfolio.html
@@ -239,18 +239,19 @@
             </div>
             <!-- scroll frame end -->
 
-           <!-- sidebar social -->
-           <div class="art-ls-social">
-            <!-- social link -->
-            <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <!-- social link -->
-            <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
-            <!-- social link -->
-            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
-          </div>
-          <!-- sidebar social end -->
+            <!-- sidebar social -->
+            <div class="art-ls-social">
+              <!-- social link -->
+              <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                  class="fab fa-linkedin-in"></i></a>
+              <!-- social link -->
+              <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
+              <!-- social link -->
+              <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+            <!-- sidebar social end -->
           </div>
           <!-- menu bar frame end -->
 
@@ -367,8 +368,8 @@
                         <img src="img/project003.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -396,8 +397,8 @@
                         <img src="img/project004.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -424,8 +425,8 @@
                         <img src="img/project005.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -509,8 +510,8 @@
                         <img src="img/project008.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -537,8 +538,8 @@
                         <img src="img/project009.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -554,8 +555,8 @@
 
                   </div>
                   <!-- col end -->
-                   <!-- col -->
-                   <div class="col-lg-4">
+                  <!-- col -->
+                  <div class="col-lg-4">
 
                     <!-- blog post card -->
                     <div class="art-a art-blog-card">
@@ -565,8 +566,8 @@
                         <img src="img/project010.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -582,8 +583,8 @@
 
                   </div>
                   <!-- col end -->
-                   <!-- col -->
-                   <div class="col-lg-4">
+                  <!-- col -->
+                  <div class="col-lg-4">
 
                     <!-- blog post card -->
                     <div class="art-a art-blog-card">
@@ -593,8 +594,8 @@
                         <img src="img/project011.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -610,8 +611,8 @@
 
                   </div>
                   <!-- col end -->
-                   <!-- col -->
-                   <div class="col-lg-4">
+                  <!-- col -->
+                  <div class="col-lg-4">
 
                     <!-- blog post card -->
                     <div class="art-a art-blog-card">
@@ -638,7 +639,7 @@
 
                   </div>
                   <!-- col end -->
- <!-- col -->
+                  <!-- col -->
                   <div class="col-lg-4">
 
                     <!-- blog post card -->
@@ -649,8 +650,8 @@
                         <img src="img/Brother2022.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="#">
                           <h5 class="mb-15">Name</h5>
@@ -666,8 +667,8 @@
 
                   </div>
                   <!-- col end -->
-                   <!-- col -->
-                   <div class="col-lg-4">
+                  <!-- col -->
+                  <div class="col-lg-4">
 
                     <!-- blog post card -->
                     <div class="art-a art-blog-card">
@@ -677,8 +678,8 @@
                         <img src="img/BAS2022.png" alt="blog post">
                       </a>
                       <!-- post cover end -->
-                       <!-- post description -->
-                       <div class="art-post-description">
+                      <!-- post description -->
+                      <div class="art-post-description">
                         <!-- title -->
                         <a href="portfolio.html">
                           <h5 class="mb-15">Name</h5>
@@ -706,20 +707,26 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-4">
+                  <div class="col-6 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
@@ -779,24 +786,24 @@
             <!-- scroll frame -->
             <div class="art-scroll-frame">
 
-             <!-- menu -->
-             <nav id="swupMenu">
-              <!-- menu list -->
-              <ul class="main-menu">
-                <!-- menu item -->
-                <li class="menu-item"><a href="home.html">Home</a></li>
-                <!-- menu item -->
-                <li class="menu-item current-menu-item"><a href="portfolio.html">Portfolio</a></li>
-                <!-- menu item -->
-                <li class="menu-item"><a href="history.html">History</a></li>
-                <!-- menu item -->
-                <li class="menu-item"><a href="contact.html">Contact</a></li>
-                <!-- menu item -->
-                <li class="menu-item"><a href="blog.html">Blog</a></li>
-              </ul>
-              <!-- menu list end -->
-            </nav>
-            <!-- menu end -->
+              <!-- menu -->
+              <nav id="swupMenu">
+                <!-- menu list -->
+                <ul class="main-menu">
+                  <!-- menu item -->
+                  <li class="menu-item"><a href="home.html">Home</a></li>
+                  <!-- menu item -->
+                  <li class="menu-item current-menu-item"><a href="portfolio.html">Portfolio</a></li>
+                  <!-- menu item -->
+                  <li class="menu-item"><a href="history.html">History</a></li>
+                  <!-- menu item -->
+                  <li class="menu-item"><a href="contact.html">Contact</a></li>
+                  <!-- menu item -->
+                  <li class="menu-item"><a href="blog.html">Blog</a></li>
+                </ul>
+                <!-- menu list end -->
+              </nav>
+              <!-- menu end -->
 
             </div>
             <!-- scroll frame end -->
