--- a/history1.html
+++ b/history1.html
@@ -62,7 +62,7 @@
               <!-- avatar -->
               <div class="art-avatar">
                 <a data-fancybox="avatar" data-no-swup href="img/face-1.jpg" class="art-avatar-curtain">
-                  <img src="img/profile-img.jpg" alt="avatar">
+                  <img src="img/apple-touch-icon.png" alt="avatar">
                   <i class="fas fa-expand"></i>
                 </a>
                 <!-- available -->
@@ -259,7 +259,6 @@
         </div>
         <!-- info bar end -->
 
-
         <!-- content -->
         <div class="art-content">
 
@@ -286,8 +285,6 @@
 
                 <!-- row -->
                 <div class="row p-30-0">
-
-                  <!-- col -->
                   <div class="col-lg-6">
 
                     <!-- section title -->
@@ -510,11 +507,13 @@
                           <!-- testimonial end -->
                         </div>
                       </div>
+                      <!-- col end -->
 
                     </div>
                     <!-- row end -->
 
                   </div>
+                  <!-- col -->
                   <div class="col-lg-6">
 
                     <!-- section title -->
@@ -593,173 +592,188 @@
                     <!-- timeline end -->
 
                   </div>
-                  <!-- col end -->
+                  <!-- container end -->
+
+                  <!-- container -->
+                  <div class="container-fluid">
+
+                    <!-- row -->
+                    <div class="row">
+                      <!-- col -->
+                      <div class="col-6 col-lg-4">
+                        <!-- brand -->
+                        <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                      </div>
+                      <!-- col end -->
+                      <!-- col -->
+                      <div class="col-6 col-lg-4">
+                        <!-- brand -->
+                        <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                      </div>
+                      <!-- col end -->
+
+                      <!-- col -->
+                      <div class="col-6 col-lg-4">
+                        <!-- brand -->
+                        <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                      </div>
+                      <!-- col end -->
+
+
+
+                    </div>
+                    <!-- row end -->
+
+                  </div>
+                  <!-- container end -->
+
+                  <!-- container -->
+                  <div class="container-fluid">
+
+                    <!-- footer -->
+                    <footer>
+                      <!-- copyright -->
+                      <div class="art-copy">© 2024 Abdul Basit</div>
+                    </footer>
+                    <!-- footer end -->
+
+                  </div>
+                  <!-- container end -->
 
                 </div>
-                <!-- row end -->
+                <!-- scroll frame end -->
 
               </div>
-              <!-- container end -->
+              <!-- swup container end -->
 
-              <!-- container -->
-              <div class="container-fluid">
+            </div>
+            <!-- content end -->
 
-                <!-- row -->
-                <div class="row">
+            <!-- menu bar -->
+            <div class="art-menu-bar">
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+              <!-- menu bar frame -->
+              <div class="art-menu-bar-frame">
+
+                <!-- menu bar header -->
+                <div class="art-menu-bar-header">
+                  <!-- menu bar button -->
+                  <div class="art-menu-bar-btn">
+                    <!-- icon -->
+                    <span></span>
                   </div>
-                  <!-- col end -->
+                  <!-- menu bar button end -->
+                </div>
+                <!-- menu bar header end -->
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand">
-                  </div>
-                  <!-- col end -->
+                <!-- current page title -->
+                <div class="art-current-page"></div>
+                <!-- current page title end -->
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand">
-                  </div>
-                  <!-- col end -->
+                <!-- scroll frame -->
+                <div class="art-scroll-frame">
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
-                  </div>
-                  <!-- col end -->
+                  <!-- menu -->
+                  <nav id="swupMenu">
+                    <!-- menu list -->
+                    <ul class="main-menu">
+                      <!-- menu item -->
+                      <li class="menu-item current-menu-item"><a href="home.html">Home</a></li>
+                      <!-- menu item -->
+                      <li class="menu-item menu-item-has-children">
+                        <a href="#" data-no-swup>Portfolio</a>
+                        <!-- sub menu -->
+                        <ul class="sub-menu">
+                          <!-- lvl 2 nav link -->
+                          <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
+                        </ul>
+                        <!-- sub menu end -->
+                      </li>
+                      <!-- menu item -->
+                      <li class="menu-item"><a href="history.html">History</a></li>
+                      <!-- menu item -->
+                      <li class="menu-item"><a href="contact.html">Contact</a></li>
+                      <!-- menu item -->
+                      <li class="menu-item menu-item-has-children">
+                        <a href="#" data-no-swup>Blog</a>
+                        <!-- sub menu -->
+                        <ul class="sub-menu">
+                          <!-- lvl 2 nav link -->
+                          <li class="menu-item"><a href="blog.html">Blog</a></li>
+                        </ul>
+                        <!-- sub menu end -->
+                      </li>
+                    </ul>
+                    <!-- menu list end -->
+                  </nav>
+                  <!-- menu end -->
 
                 </div>
-                <!-- row end -->
+                <!-- scroll frame end -->
 
               </div>
-              <!-- container end -->
-
-              <!-- container -->
-              <div class="container-fluid">
-
-                <!-- footer -->
-                <footer>
-                  <!-- copyright -->
-                  <div class="art-copy">© 2024 Abdul Basit</div>
-                </footer>
-                <!-- footer end -->
-
-              </div>
-              <!-- container end -->
+              <!-- menu bar frame -->
 
             </div>
-            <!-- scroll frame end -->
+            <!-- menu bar end -->
 
           </div>
-          <!-- swup container end -->
+          <!-- app container end -->
 
         </div>
-        <!-- content end -->
+        <!-- app wrapper end -->
 
-        <!-- menu bar -->
-        <div class="art-menu-bar">
-
-          <!-- menu bar frame -->
-          <div class="art-menu-bar-frame">
-
-            <!-- menu bar header -->
-            <div class="art-menu-bar-header">
-              <!-- menu bar button -->
-              <div class="art-menu-bar-btn">
-                <!-- icon -->
-                <span></span>
-              </div>
-              <!-- menu bar button end -->
-            </div>
-            <!-- menu bar header end -->
-
-            <!-- current page title -->
-            <div class="art-current-page"></div>
-            <!-- current page title end -->
-
-            <!-- scroll frame -->
-            <div class="art-scroll-frame">
-
-              <!-- menu -->
-              <nav id="swupMenu">
-                <!-- menu list -->
-                <ul class="main-menu">
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="home.html">Home</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item "><a href="portfolio.html">Portfolio</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="history.html">History</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item"><a href="contact.html">Contact</a></li>
-                  <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="blog.html">Blog</a></li>
-                </ul>
-                <!-- menu list end -->
-              </nav>
-              <!-- menu end -->
-
-            </div>
-            <!-- scroll frame end -->
-
+        <!-- preloader -->
+        <div class="art-preloader">
+          <!-- preloader content -->
+          <div class="art-preloader-content">
+            <!-- title -->
+            <h4>Abdul Basit</h4>
+            <!-- progressbar -->
+            <div id="preloader" class="art-preloader-load"></div>
           </div>
-          <!-- menu bar frame -->
-
+          <!-- preloader content end -->
         </div>
-        <!-- menu bar end -->
+        <!-- preloader end -->
 
       </div>
-      <!-- app container end -->
+      <!-- app end -->
 
-    </div>
-    <!-- app wrapper end -->
+      <!-- jquery js -->
+      <script src="js/plugins/jquery.min.js"></script>
+      <!-- anime js -->
+      <script src="js/plugins/anime.min.js"></script>
+      <!-- swiper js -->
+      <script src="js/plugins/swiper.min.js"></script>
+      <!-- progressbar js -->
+      <script src="js/plugins/progressbar.min.js"></script>
+      <!-- smooth scrollbar js -->
+      <script src="js/plugins/smooth-scrollbar.min.js"></script>
+      <!-- overscroll js -->
+      <script src="js/plugins/overscroll.min.js"></script>
+      <!-- typing js -->
+      <script src="js/plugins/typing.min.js"></script>
+      <!-- isotope js -->
+      <script src="js/plugins/isotope.min.js"></script>
+      <!-- fancybox js -->
+      <script src="js/plugins/fancybox.min.js"></script>
+      <!-- swup js -->
+      <script src="js/plugins/swup.min.js"></script>
 
-    <!-- preloader -->
-    <div class="art-preloader">
-      <!-- preloader content -->
-      <div class="art-preloader-content">
-        <!-- title -->
-        <h4>Abdul Basit</h4>
-        <!-- progressbar -->
-        <div id="preloader" class="art-preloader-load"></div>
-      </div>
-      <!-- preloader content end -->
-    </div>
-    <!-- preloader end -->
+      <!-- main js -->
+      <script src="js/main.js"></script>
 
-  </div>
-  <!-- app end -->
+</body>
 
-  <!-- jquery js -->
-  <script src="js/plugins/jquery.min.js"></script>
-  <!-- anime js -->
-  <script src="js/plugins/anime.min.js"></script>
-  <!-- swiper js -->
-  <script src="js/plugins/swiper.min.js"></script>
-  <!-- progressbar js -->
-  <script src="js/plugins/progressbar.min.js"></script>
-  <!-- smooth scrollbar js -->
-  <script src="js/plugins/smooth-scrollbar.min.js"></script>
-  <!-- overscroll js -->
-  <script src="js/plugins/overscroll.min.js"></script>
-  <!-- typing js -->
-  <script src="js/plugins/typing.min.js"></script>
-  <!-- isotope js -->
-  <script src="js/plugins/isotope.min.js"></script>
-  <!-- fancybox js -->
-  <script src="js/plugins/fancybox.min.js"></script>
-  <!-- swup js -->
-  <script src="js/plugins/swup.min.js"></script>
 
-  <!-- main js -->
-  <script src="js/main.js"></script>
+<!-- Mirrored from miller.bslthemes.com/arter-demo/history.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 May 2024 17:46:22 GMT -->
+
+</html>.min.js"></script>
+<!-- swup js -->
+<script src="js/plugins/swup.min.js"></script>
+
+<!-- main js -->
+<script src="js/main.js"></script>
 
 </body>
 
